# ISC25-ICON-C

./: .gitignore  CMakeLists.txt  README.md  ans  backup.cpp  export.sh  gpu.ncu-rep  main.cpp  main_mpi.cpp  main_mpi_nsys.cpp  main_seq.cpp  main_seq_read.cpp  output  output.txt  plot.py  plot_speedup.py  record.txt  repository_path.txt  wrapper.sh
build_std_cpu_double/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_cpu_double/implementations/sequential/: Makefile  cmake_install.cmake
build_std_gpu/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_gpu/implementations/std/: Makefile
build_std_gpu/io/: Makefile
build_std_gpu_mpi/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_gpu_mpi/implementations/std/: Makefile
build_std_gpu_mpi/io/: Makefile
build_std_gpu_mpi_2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_std_gpu_mpi_2/implementations/std/: Makefile
build_std_gpu_mpi_2/io/: Makefile
build_std_gpu_mpi_double/: CMakeCache.txt  Makefile
core/common/: types.hpp
experiment/multi-node/nvsmi/: nvsmi.log.16752125.0  nvsmi.log.16752231.0  nvsmi.log.16752231.1  nvsmi.log.16752298.0  nvsmi.log.16752298.1  nvsmi.log.16752298.2  nvsmi.log.16752396.0  nvsmi.log.16752396.1  nvsmi.log.16752396.2  nvsmi.log.16752396.3  nvsmi.log.16777734.0  nvsmi.log.16777915.1  nvsmi.log.16777915.2  nvsmi.log.16777915.3  nvsmi.log.16778265.1  nvsmi.log.16778612.1
experiment/multi-node/old/nvsmi/: nvsmi.log.16777915.0  nvsmi.log.16778265.0  nvsmi.log.16778612.0  nvsmi.log.16778612.2
implementations/std/: CMakeLists.txt  graupel copy.cpp  graupel.cpp
implementations/std/backup/: graupel_SoA_v2.cpp  graupel_SoA_v4.cpp  graupel_backup.cpp  graupel_base_base.cpp  graupel_baseline.cpp  graupel_coalescing_v1.cpp  graupel_cpu.cpp  graupel_gpu.cpp  graupel_latest.cpp  graupel_pointer_v5.cpp  graupel_reoder_brachless_v3.cpp  latest.cpp
io/: CMakeLists.txt  io copy.cpp  io.cpp  io.hpp
nsys_reports/: cpu.sqlite  gpu.nsys-rep  gpu.sqlite  rank_.nsys-rep  rank_.sqlite
reference_results/: gpu_11k_double.nc  gpu_11k_single.nc  gpu_20k_double.nc  gpu_20k_single.nc  gpu_dgb_single.nc  seq_11k_double.nc  seq_11k_single.nc  seq_20k_double.nc  seq_20k_single.nc  seq_dbg_double.nc  seq_dbg_single.nc
scripts/: build_cpu_double.sh  build_cpu_signle.sh  build_cpu_single.sh  build_gpu_double.sh  build_gpu_single.sh  check-correctness.sh  levante-cpu.sbatch  levante-gpu-energy.batch  levante-gpu.sbatch  levante-setup.sh  levante_energy.batch  levante_gpu_energy.batch  process_and_plot.py  run_wrapper_levante.sh
test/: common.cc
